*Empty MediaWiki Message*

--- a/Tanulya.mw
+++ b/Tanulya.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tanulya''' ([[Assaɣ ussnan]]: ''Acherontia atropos'') d [[talmest]] n [[tikberafriwin|tkebrafriwin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tafrijja|tefrijja]]. Talmest-a tettidir s talɣa tagejdant deg [[Turuft|Uruppa]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] d [[asamar alemmas|usamar alemmas]]. Tanulya d aferṭeṭṭu meqqren [[tinigt n iferṭeṭṭa|yettinigen]].
+'''Tanulya''' ([[Assaɣ ussnan]]: '''Acherontia atropos''') d [[talmest]] n [[tikberafriwin|tkebrafriwin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tafrijja|tefrijja]]. Talmest-a tettidir s talɣa tagejdant deg [[Turuft|Uruppa]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] d [[asamar alemmas|usamar alemmas]]. Tanulya d aferṭeṭṭu meqqren [[tinigt n iferṭeṭṭa|yettinigen]].
 
 == Aglam ==
 '''Aferṭeṭṭu''' 
