*Empty MediaWiki Message*

--- a/Tanulya.mw
+++ b/Tanulya.mw
@@ -2,7 +2,7 @@
 '''Tanulya''' ([[Assaɣ ussnan]]: '''Acherontia atropos''') d [[talmest]] n [[tikberafriwin|tkebrafriwin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tafrijja|tefrijja]]. Talmest-a tettidir s talɣa tagejdant deg [[Turuft|Uruppa]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] d [[asamar alemmas|usamar alemmas]]. Tanulya d aferṭeṭṭu meqqren [[tinigt n iferṭeṭṭa|yettinigen]].
 
 == Aglam ==
-'''Aferṭeṭṭu''' 
+===Aferṭeṭṭu===
 
 Am yakk tifrijjiwin, [[tanuba]] n tnulya d aferṭeṭṭu ilan tafekka meqqren. 
 
@@ -14,4 +14,4 @@ Acherontia atropos MHNT Tete de mort.jpg|Marque dorsale - [[MHNT]]
 </gallery>
 
 
-'''Taẓlift'''
+===Taẓlift===
