*Empty MediaWiki Message*

--- a/Tanulya.mw
+++ b/Tanulya.mw
@@ -15,3 +15,8 @@ Acherontia atropos MHNT Tete de mort.jpg|Marque dorsale - [[MHNT]]
 
 
 ===Taẓlift===
+Tiẓlifin n tnulya ttwassnen-t s taggara n wafriwen-is yemmugen am V. Akken daɣen i tla (tesɛa) [[icc]] deg tazwara n tfekka-ynes
+
+== Tanulya d tzizwa ==
+
+== Ẓeṛ daɣen ==
