*Empty MediaWiki Message*

--- a/Akunder.mw
+++ b/Akunder.mw
@@ -3,6 +3,10 @@
 
 == Ismawen imuranen d yismawen ussnanen ==
 
+* [[Akunder n tniri]] — ''Meriones crassus''
+* [[Akunder n Mangulya]] — ''Meriones unguiculatus''
+* [[Akunder n tmazɣa]] — ''Meriones unguiculatus''
+
 == Asismel ==
 Asismel n ukunder ar tura mazal ur yefri ara gar imusbawen
 
