*Empty MediaWiki Message*

--- a/Akunder.mw
+++ b/Akunder.mw
@@ -3,7 +3,7 @@
 
 == Ismawen imuranen d yismawen ussnanen ==
 
-* [[Akunder n tniri]] — ''Meriones crassus''
+* [[Akunder anezraf]] — ''Meriones crassus''
 * [[Akunder n Mangulya]] — ''Meriones unguiculatus''
 * [[Akunder n tmazɣa]] — ''Meriones unguiculatus''
 
