--- a/2019.mw
+++ b/2019.mw
@@ -5,6 +5,6 @@ Tira n '''2019''' : « Sin igiman mraw tẓa »
 = Tiswasin nniḍen =
 Aseggas '''2019''' deg teswast tagrigurit (calendrier grégorien), iwulem i useggas n :
 
-* 2969 deg teswast n [[Imaziɣen|Yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2969, ad d-yas ass n 12 [[yennayer]] 2019);
-* 4716 - 4717 deg teswast n [[Ccinwa|Yicinwaten]] (Aseggas amaynut n Yicinwaten 4717, ad d-yas ass n 16 [[furar]] 2019);
-* 1440 - 1441 deg teswast n [[Tineslemt|Yinselmen]] (Aseggas amaynut n Yinselmen 1441, ad d-yas ass 1 [[ctamber]] 2019).
+* 2969 deg teswast n [[Imaziɣen|Yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2969, yusa-d ass n 12 [[yennayer]] 2019);
+* 4716 - 4717 deg teswast n [[Ccinwa|Yicinwaten]] (Aseggas amaynut n Yicinwaten 4717, yusa-d ass n 16 [[furar]] 2019);
+* 1440 - 1441 deg teswast n [[Tineslemt|Yinselmen]] (Aseggas amaynut n Yinselmen 1441, yusa-d ass 1 [[ctamber]] 2019).
