*Empty MediaWiki Message*

--- a/2019.mw
+++ b/2019.mw
@@ -1,4 +1,4 @@
-Aseggas '''2019''' d aseggas-a i yezrin, d aseggas aḥerfi (365 n wussan). D aseggas wis 2019 deg wakud-agi-neɣ, d aseggas wis 19 deg wagim XXI (lqern 21) daɣen d aseggas wis 10 (d aneggaru) deg umrawseggas 2010 - 2019.
+Aseggas '''2019''' d aseggas aḥerfi (365 n wussan). D aseggas wis 2019 deg wakud-agi-neɣ, d aseggas wis 19 deg wagim XXI (lqern 21) daɣen d aseggas wis 10 (d aneggaru) deg umrawseggas 2010 - 2019.
 
 Tira n '''2019''' : « Sin igiman mraw tẓa »
 
