--- a/2019.mw
+++ b/2019.mw
@@ -2,7 +2,7 @@ Aseggas '''2019''' d aseggas aḥerfi (365 n wussan). D aseggas wis 2019 deg wak
 
 Tira n '''2019''' : « Sin igiman mraw tẓa »
 
-= Tiswasin nniḍen =
+= Tiswasin-nniḍen =
 Aseggas '''2019''' deg teswast tagrigurit (calendrier grégorien), iwulem i useggas n :
 
 * 2969 deg teswast n [[Imaziɣen|Yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2969, yusa-d ass n 12 [[yennayer]] 2019);
