--- a/2020.mw
+++ b/2020.mw
@@ -2,7 +2,7 @@
 2020 d aseggas wis 2020 deg wakud-agi-neɣ, d aseggas wis 20 deg wagim (lqern) wis 21, daɣen d aseggas amenzu deg umrawseggas 2020-2029.<br>
 Tira n '''2020''': <<sin igiman snat tmarwin>>
 
-==Tiswassin-nniḍen==
+==Tiswasin-nniḍen==
 Aseggas '''2020''' deg teswast tagrigurit (calendrier grégorien), iwulem i useggas n :
 
 * 2970 deg teswast n [[Imaziɣen|Yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2969, ad d-yas ass n 12 [[yennayer]] 2020);
