*Empty MediaWiki Message*

--- a/2020.mw
+++ b/2020.mw
@@ -8,3 +8,29 @@ Aseggas '''2020''' deg teswast tagrigurit (calendrier grégorien), iwulem i useg
 * 2970 deg teswast n [[Imaziɣen|Yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2969, ad d-yas ass n 12 [[yennayer]] 2020);
 * 4717 - 4718 deg teswast n [[Ccinwa|Yicinwaten]].
 * 1441 - 1442 deg teswast n [[Tineslemt|Yinselmen]].
+
+== Ineḍruyen n 2020 ==
+
+===Yennayer===
+* 12 yennayer 2020: Amenzu n yennayer deg teswast n yimaziɣen (anekcum n useggas amaynut n yimaziɣen 2970).
+===Furar===
+
+===Meɣres===
+
+===Yebrir===
+
+===Mayyu===
+
+===Yunyu===
+
+===Yulyu===
+
+===Ɣuct===
+
+===Ctamber===
+
+===Tuber===
+
+===Wamber===
+
+===Dujember===
