--- a/2020.mw
+++ b/2020.mw
@@ -5,9 +5,9 @@ Tira n '''2020''': <<sin igiman snat tmarwin>>
 ==Tiswasin-nniḍen==
 Aseggas '''2020''' deg teswast tagrigurit (calendrier grégorien), iwulem i useggas n :
 
-* 2970 deg teswast n [[Imaziɣen|Yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2969, ad d-yas ass n 12 [[yennayer]] 2020);
-* 4717 - 4718 deg teswast n [[Ccinwa|Yicinwaten]].
-* 1441 - 1442 deg teswast n [[Tineslemt|Yinselmen]].
+* 2970 deg teswast n [[Imaziɣen|yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2969, ad d-yas ass n 12 [[yennayer]] 2020);
+* 4717 - 4718 deg teswast n [[Ccinwa|yicinwaten]].
+* 1441 - 1442 deg teswast n [[Tineslemt|yinselmen]].
 
 == Ineḍruyen n 2020 ==
 
