--- a/Letnayen.mw
+++ b/Letnayen.mw
@@ -1,9 +1,10 @@
-'''Arim''' d [[ass]] wis sin imalas id yettasen deffir n [[Acer]] yettezwiren ass n [[Aram|waram]]. Deg ansay
+'''Arim''' (letnayen), s [[tafrensist|tefransist]] '''lundi''', d [[ass]] wissin deg [[imalas|yimalas]] (semmana), s deffir-is yettas-d [[Acer]] (lḥed), zdat-is yettili [[Aram|waram]] (ttlata).
 
 
 == Deg wesɣan ==
-* Deg [[tudayt]]: Arim ɣer [[udayen|wudayen]] d ass dgi yettwari (yettwaḥemmel) dges [[aẓummu|uẓẓmu]]
-* Deg [[Tamasiḥit|trumit]]: d ass amezwaru n [[tamalast|imalas]]
+* Deg [[tudayt]]: Arim ɣer [[udayen|wudayen]] d ass i yifen ussan i tuẓumt.
+* Deg [[Tamasiḥit|yirumyen]]: d ass amezwaru n [[imalas|yimalas]].
+
 {{Agni n ussan n imalas}}
 
 
