*Empty MediaWiki Message*

--- a/Ttlata.mw
+++ b/Ttlata.mw
@@ -1,4 +1,4 @@
-'''Aram''' d [[ass]] n imalas id yettasen send [[Arim]] d seld n [[Ahad]]. Deg ansay, d ass wis kṛaḍ n imalas
+'''Aram''' (ttlata), s [[tafrensist|tefransist]] '''mardi''', d [[ass]] n yimalas i d-yettasen zdat n [[Arim|warim]] (letnayen), s deffir n [[Ahad|wahad]] (larebɛa). Deg wansay, d ass wis kraḍ (3) n yimalas
 
 {{Agni n ussan n imalas}}
 
