*Empty MediaWiki Message*

--- a/Larebɛa.mw
+++ b/Larebɛa.mw
@@ -1,4 +1,5 @@
-'''Ahad''' d [[ass]] n imalas id yettasen send n [[Aram|waram]] i d-yettezwiren [[Amhad]]. Deg ansay, d ass wis [[kuẓ]] n imalas
+'''Ahad''' (larebɛa),  d [[ass]] n yimalas i d-yettasen zdat n [[Aram|waram]] (ttlata), s deffir n [[Amhad|wemhad]] (lexmis). Deg wansay, d ass wis [[kuẓ]] (4) n yimalas.
+
 {{Agni n ussan n imalas}}
 
 [[Taggayt:Ahad|*]]
