--- a/2020.mw
+++ b/2020.mw
@@ -1,4 +1,4 @@
-'''2020''' d [[aseggas]] i deg nella tura. Yal 28 n yiseggasen itezzi-d useggas i yecban wagi i deg nella tura, am [[1992]], 2020, [[2048]] ...atg. Acku ɣur-s 366 n [[ass|wussan]], yettas-s umenzu-is deg wass n [[larebɛa]], 29 furar d [[ssebt]], daɣen 31 dujember d [[lexmis]].<br>
+'''2020''' d [[aseggas]] i deg nella tura. Yal 28 n yiseggasen itezzi-d useggas i yecban wagi i deg nella tura, am [[1992]], 2020, [[2048]], atg. Acku ɣur-s 366 n [[ass|wussan]], yettas-s umenzu-is deg wass n [[larebɛa]], 29 furar d [[ssebt]], daɣen 31 dujember d [[lexmis]].<br>
 2020 d aseggas wis 2020 deg wakud-agi-neɣ, d aseggas wis 20 deg wagim (lqern) wis 21, daɣen d aseggas amenzu deg umrawseggas 2020-2029.<br>
 Tira n '''2020''': <<sin igiman snat tmarwin>>
 
