*Empty MediaWiki Message*

--- a/Anessas.mw
+++ b/Anessas.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Anessas''' ([[Assaɣ ussnan]]: ''Mustela putorius furo'') d [[talmest]] n [[Timseksumin|temseksumin]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tadɣaɣat|tedɣaɣat]] deg [[tawacult (tasnudert)|tawacult]] n [[tidɣaɣatin|tedɣaɣatin]], Anessas i d [[talmest]] [[agrad|tamegrudt]] n [[awerta yegran|uwerta n igran]] maca azmez n wegrad-is i tikkelt tamezwarut ur yettwassen ara ɣas akken llan wid id yeqqaren send n 2500 n iseggasen 
+'''Anessas''' ([[Assaɣ ussnan]]: '''Mustela putorius furo''') d [[talmest]] n [[Timseksumin|temseksumin]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tadɣaɣat|tedɣaɣat]] deg [[tawacult (tasnudert)|tawacult]] n [[tidɣaɣatin|tedɣaɣatin]], Anessas i d [[talmest]] [[agrad|tamegrudt]] n [[awerta yegran|uwerta n igran]] maca azmez n wegrad-is i tikkelt tamezwarut ur yettwassen ara ɣas akken llan wid id yeqqaren send n 2500 n iseggasen
 
 == Aglam ==
 
