--- a/Timezmleft.mw
+++ b/Timezmleft.mw
@@ -2,6 +2,15 @@
 '''Timezmleft''' neɣ '''Ihiẓaw''' neɣ '''Tamuzbuzt''' ('''[[Assaɣ ussnan]]''': ''Serinus serinus'') d [[talmest]] n [[aylal|iylalen]] meẓẓiyen yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tibenferriwin|tbenferriwin]]. Timizrmleft d talmest yellan s waṭas deg [[Turuft|Uruppa]] ula di [[Tamurt n Leqbayel|tmurt n Iqbayliyen]] maca mači s tuget am Uruppa. Dɣa talmest-a d tin id yettilin i [[Timezmleft tawraɣt|temzemleft tawraɣt]] 
 
 == Aglam ==
+Timezmleft d agmam meẓẓiyen yakk deg twacult n [[Tibenferriwin|tbenferriwin]] (gar n telmas timezdiyin yakk) acku tiddi-ynes d tin yettawṭen ar 11,5 cm 
+
+Sufel n wanect-a. Tafekka n [[agṭiṭ|wegṭiṭ-a]] d tin igan d tamezdayt (tamdewrant) d [[aqamum|uqamum-is]] meẓẓiyen 
+
+[[Awtem]] d win ilan aqerru d awraɣ. D yidmaren Malén ad tizzegzut yakk d timɣilt (tameccact ar iylalen). Imuyag-is d adalen (azegza am uzemmur). Azagur-is d [[iferr|wafriwen-is]] d izunɣiden malen ar tizzegzut
+
+[[Tawtemt]] d tin id s-yettemcabin acemma maca initen-is msullsen (qessiḥ-it) cwiya
+
+== Taẓuni ==
 
 == Ẓeṛ daɣen ==
 * [[Timsennent]]
