--- a/Timezmleft.mw
+++ b/Timezmleft.mw
@@ -11,6 +11,20 @@ Sufel n wanect-a. Tafekka n [[agṭiṭ|wegṭiṭ-a]] d tin igan d tamezdayt (t
 [[Tawtemt]] d tin id s-yettemcabin acemma maca initen-is msullsen (qessiḥ-it) cwiya
 
 == Taẓuni ==
+[[Tugna:Serinus serinus 01 distr.png |vignette|left|upright=1.2|
+{{Legend/beginning|center}}
+{{Legend|#008040}}
+{{Legend|#0000ff}}
+{{Legend|#ff8000}}
+{{Legend/Fin}}]]
+
+== Tinigt ==
+
+== Asčewčwe ==
+
+== Asegdef (amyaraw) ==
+
+== Ẓeṛ daɣen ==
 
 == Ẓeṛ daɣen ==
 * [[Timsennent]]
