--- a/MATLAB.mw
+++ b/MATLAB.mw
@@ -1,8 +1,10 @@
 {{Databox}}
-'''MATLAB''' ''« '''ma'''trix '''lab'''oratory »'' d tutlayt n usihel i d-yettwarnan sɣur takebbanit [[MathWorks]], lqem amezwaru yeffeɣ-d deg useggas n [[1984]]. MATLAB yettwasexdam i leḥsabat umḍinen (calculs numériques), ass-a tutlayt-agi n usihel ɣur-s ugar n 4 imelyunen n yemseqdac ama deg uxeddim neɣ deg unadi usnan.
 
-==Amezruy==
+'''MATLAB''' ''« '''ma'''trix '''lab'''oratory »'' d tutlayt n usihel s iskripten i d-yettwarnan sɣur takebbanit [[MathWorks]], lqem amezwaru yeffeɣ-d deg useggas n [[1984]]. MATLAB yettwasexdam i leḥsabat umḍinen (calculs numériques), ass-a tutlayt-agi n usihel ɣur-s azal n 4 imelyunen n yemseqdac<ref name="mathworks">https://fr.mathworks.com/company/aboutus.html (s tefransist)</ref> ama deg uxeddim neɣ deg unadi usnan.
 
-==Amedya==
+== Amezruy ==
+Ixef-a d ilem!
+
+== Iɣbula ==
 
 [[Taggayt:Timeslayin n usihel]]
