--- a/Tutlayt_tacelḥit.mw
+++ b/Tutlayt_tacelḥit.mw
@@ -32,7 +32,7 @@ Kra n wawalen i d-yekkan seg Teɛrabt :
  {| class="wikitable alternance"
  |-
  ! scope="col" | Tasusit
- ! scope="col" | Taserɣint
+ ! scope="col" | Taɛrabt
  ! scope="col" | Taqbaylit
  |-
  | Aferran
