--- a/1984.mw
+++ b/1984.mw
@@ -3,7 +3,7 @@
 ==Tiswassin-nniḍen==
 Aseggas '''1984''' deg teswast tagrigurit (calendrier grégorien), iwulem i useggas n :
 
-* 2934 deg teswast n [[Imaziɣen|yimaziɣen]] (Aseggas amaynut n Yimaziɣen 2934, yusa-d ass n 12 [[yennayer]] 1984)
+* 2934 deg teswast n [[Imaziɣen|yimaziɣen]] (Aseggas amaynut n yimaziɣen 2934, yusa-d ass n 12 [[yennayer]] 1984)
 
 ==Ineḍruyen n 1984==
 
