--- a/Imalas.mw
+++ b/Imalas.mw
@@ -1,5 +1,16 @@
+[[File:Italian - Bracelet - Walters 41269.jpg|thumb|upright=1.75|Tazebget taṭelyanit i d-yessebganen ussan n yimalas (lqern 21)]]
 '''Imalas''' neɣ '''semmana''' d tayunt n wakud deg-s 7 n [[ass|wussan]] mseḍfaṛen.<br>
 [[Aseggas]] ɣur-s 52 n yimalas tikwal 53, imalas ɣur-s 7 n wussan, imalas amenzu deg useggas d win i deg d-yeɣli [[lexmis]] amenzu.
+
+==Ussan n yimalas==
+Ussan n yimalas am akken i yersen deg [[ISO]]:
+
+{|border="1" class="wikitable"
+|- style="text-align:center;"
+| 1 || 2 || 3 || 4 || 5 || 6 || 7
+|-
+|[[Letnayen]]||[[Ttlata]]||[[Larebɛa]]||[[Lexmis]]||[[Lǧemɛa]]||[[Ssebt]]||[[Lḥedd]]
+|}
 
 ==Ẓer daɣen==
 *[[Ussan n yimalas]]
