--- a/Imalas.mw
+++ b/Imalas.mw
@@ -11,6 +11,8 @@ Ussan n yimalas am akken i yersen deg [[ISO]]:
 | 1 || 2 || 3 || 4 || 5 || 6 || 7
 |-
 |[[Letnayen]]||[[Ttlata]]||[[Larebɛa]]||[[Lexmis]]||[[Lǧemɛa]]||[[Ssebt]]||[[Lḥedd]]
+|-
+|[[Arim]]||[[Aram]]||[[Ahad]]||[[Amhad]]||[[Sem]]||[[Sed]]||[[Acer]] 
 |}
 
 ==Ẓer daɣen==
