*Empty MediaWiki Message*

--- a/Imalas.mw
+++ b/Imalas.mw
@@ -15,7 +15,12 @@ Ussan n yimalas am akken i yersen deg [[ISO]]:
 |[[Arim]]||[[Aram]]||[[Ahad]]||[[Amhad]]||[[Sem]]||[[Sed]]||[[Acer]] 
 |}
 
+==Amezruy==
+Ixef-a d ilem
+
 ==Ẓer daɣen==
-*[[Ussan n yimalas]]
+*[[Ass]] 
+*[[Ayyur (akud)|Ayyur]]
+*[[Aseggas]]
 
 [[Taggayt:imalas]]
