*Empty MediaWiki Message*

--- a/Acer.mw
+++ b/Acer.mw
@@ -1,4 +1,4 @@
-'''Acer''' yettwasnen s isem n (''Lḥedd'') d [[ass]] wis 7 n [[timalast]] (imalas), Yettasend seld n [[Sed]] d send n [[arim|warim]]
+'''Acer''' yettwasnen s isem n (''Lḥedd'') d [[ass]] wis 7 n [[Imalas|yimalas]], Yettasend seld n [[Sed]] d send n [[arim|warim]]
 Di [[tamurt n Leqbayel|tmurt n Iqbayliyen]], Yettili d ass n ulzuz (tsewwiqt) di kra n tamiwin deg wass-a (acer) ma di tmura n umalu ([[Turuft]], [[Kanada]], Marikan ... yettili d ass aneggaru n tmalast acku ass n [[Sed]] d wass n Acer d ussan n [[asgunfu|wesgunfu]] di tuget n tmura n [[tagnit|tegnit]]
 
 == Acer deg usɣan == 
