*Empty MediaWiki Message*

--- a/Acer.mw
+++ b/Acer.mw
@@ -3,3 +3,5 @@ Di [[tamurt n Leqbayel|tmurt n Iqbayliyen]], Yettili d ass n ulzuz (tsewwiqt) di
 
 == Acer deg usɣan == 
 Imasiḥiyen [[Taẓallit|ttẓallan]]  yal ass n Sed deg [[tamezdayt(asɣan)|tmezdayt]]
+
+[[Taggayt:Imalas]]
