--- a/Acer.mw
+++ b/Acer.mw
@@ -4,4 +4,5 @@ Di [[tamurt n Leqbayel|tmurt n Iqbayliyen]], Yettili d ass n ulzuz (tsewwiqt) di
 == Acer deg usɣan == 
 Imasiḥiyen [[Taẓallit|ttẓallan]]  yal ass n Sed deg [[tamezdayt(asɣan)|tmezdayt]]
 
+{{Agni n ussan n imalas}}
 [[Taggayt:Imalas]]
