*Empty MediaWiki Message*

--- a/Lexmis.mw
+++ b/Lexmis.mw
@@ -1,6 +1,4 @@
 Amhad, d ass n imalas i ḍfaren [[Ahad]] dɣa i zwiren [[Sem]]. Deg ansay, d ass wis-semmus n imalas, maca yella am ass wis-kuẓ n imalas deg kra timura.
 
 {{Agni n ussan n imalas}}
-
-[[Taggayt:Amhad|*]]
-[[Taggayt:Imalas]]
+[[Taggayt:Ussan n yimalas]]
