--- a/Sem.mw
+++ b/Sem.mw
@@ -1,5 +1,4 @@
 Sem, d ass n imalas i ḍfaren [[Amhad]] dɣa i zwiren [[Sed]]. Deg ansay, d ass wis-sḍis n imalas, lameɛna yella am ass wis-semmus n imalas deg kra timura.
 
 {{Agni n ussan n imalas}}
-[[Taggayt:Sem|*]]
-[[Taggayt:Imalas]]
+[[Taggayt:Ussan n yimalas]]
