*Empty MediaWiki Message*

--- a/Sed.mw
+++ b/Sed.mw
@@ -1,4 +1,3 @@
 Sed, d ass n imalas i ḍfaren [[Sem]] dɣa i zwiren [[Ačer]]. Deg ansay, d ass wis-sa n imalas, lameɛna yella am ass wis-sḍis n imalas deg kra timura.
 {{Agni n ussan n imalas}}
-[[Taggayt:Sed|*]]
-[[Taggayt:Imalas]]
+[[Taggayt:Ussan n yimalas]]
