*Empty MediaWiki Message*

--- a/Acer.mw
+++ b/Acer.mw
@@ -5,4 +5,4 @@ Di [[tamurt n Leqbayel|tmurt n Iqbayliyen]], Yettili d ass n ulzuz (tsewwiqt) di
 Imasiḥiyen [[Taẓallit|ttẓallan]]  yal ass n Sed deg [[tamezdayt(asɣan)|tmezdayt]]
 
 {{Agni n ussan n imalas}}
-[[Taggayt:Imalas]]
+[[Taggayt:Ussan n yimalas]]
