*Empty MediaWiki Message*

--- a/Letnayen.mw
+++ b/Letnayen.mw
@@ -6,7 +6,4 @@
 * Deg [[Tamasiḥit|yirumyen]]: d ass amezwaru n [[imalas|yimalas]].
 
 {{Agni n ussan n imalas}}
-
-
-[[Taggayt:Arim|*]]
-[[Taggayt:Imalas]]
+[[Taggayt:Ussan n yimalas]]
