*Empty MediaWiki Message*

--- a/Ttlata.mw
+++ b/Ttlata.mw
@@ -1,6 +1,4 @@
 '''Aram''' (ttlata), s [[tafrensist|tefransist]] '''mardi''', d [[ass]] n yimalas i d-yettasen zdat n [[Arim|warim]] (letnayen), s deffir n [[Ahad|wahad]] (larebɛa). Deg wansay, d ass wis kraḍ (3) n yimalas
 
 {{Agni n ussan n imalas}}
-
-[[Taggayt:Aram|*]]
-[[Taggayt:Imalas]]
+[[Taggayt:Ussan n yimalas]]
