*Empty MediaWiki Message*

--- a/Larebɛa.mw
+++ b/Larebɛa.mw
@@ -1,6 +1,4 @@
 '''Ahad''' (larebɛa),  d [[ass]] n yimalas i d-yettasen zdat n [[Aram|waram]] (ttlata), s deffir n [[Amhad|wemhad]] (lexmis). Deg wansay, d ass wis [[kuẓ]] (4) n yimalas.
 
 {{Agni n ussan n imalas}}
-
-[[Taggayt:Ahad|*]]
-[[Taggayt:Imalas]]
+[[Taggayt:Ussan n yimalas]]
