*Empty MediaWiki Message*

--- a/At_Walban.mw
+++ b/At_Walban.mw
@@ -1,3 +1,11 @@
 {{Databox}}
 '''At Walban''' d yiwet n taddart i yellan deg tɣiwant n [[Ṣaḥariǧ]] deg twilayt n [[Tubiret]] deg [[Tmurt n Leqbayel|Tamurt n yiqbayliyen]].
+
+==Amezruy==
+===Tallit n yiɛutmaniyen===
+
+===Tallit n yefransisen===
+
+===Seld  ifransisen===
+
 [[category:tuddar|At Walban]]
