--- a/Aṭad.mw
+++ b/Aṭad.mw
@@ -1,6 +1,6 @@
 [[Tugna:Finger.agr.jpg|150px|thumb|Aḍad n [[Afus|ufus]] aẓelmaṭ (uskin)]]
 
-'''Aṭad''' d amur deg [[Afus|ufus]] d [[aṭar (agman)|uṭar]] n [[afgan|ufgan]] d [[Tigjdanin|tgejdanin]] n iden, yezga-d ɣer yixef n ufus. Afus n ufgan ɣur-s semmus (5) n yiḍudan, ttusexdamen deg waṭas n tigawin am usami, tuṭfa, [[tira]] ...atg
+'''Aḍad''' d amur deg [[Afus|ufus]] d [[aṭar (agman)|uḍar]] n [[afgan|ufgan]] d [[Tigjdanin|tgejdanin]]-nniḍen, yezga-d ɣer yixef n ufus. Afus n ufgan ɣur-s semmus (5) n yiḍudan, ttusexdamen deg waṭas n tigawin am usami, tuṭfa, [[tira]] ...atg
 
 == Ismawen n iṭudan == 
 *1 [[Adebbuz]]
