*Empty MediaWiki Message*

--- a/Aṭad.mw
+++ b/Aṭad.mw
@@ -3,11 +3,11 @@
 '''Aḍad''' d amur deg [[Afus|ufus]] d [[aṭar (agman)|uḍar]] n [[afgan|ufgan]] d [[Tigjdanin|tgejdanin]]-nniḍen, yezga-d ɣer yixef n ufus. Afus n ufgan ɣur-s semmus (5) n yiḍudan, ttusexdamen deg waṭas n tigawin am usami, tuṭfa, [[tira]] ...atg
 
 == Ismawen n iṭudan == 
-*1 [[Adebbuz]]
-*2 [[Uskin]]
-*3 [[Alemmas]] 
-*4 [[Warisem]]
-*5 [[Tilṭeṭ]]
+#[[Adebbuz]]
+#[[Uskin]]
+#[[Alemmas]] 
+#[[Warisem]]
+#[[Tilṭeṭ]]
 
 ==Tamawalt==
 Asget : Iḍudan<br>
