*Empty MediaWiki Message*

--- a/Huawei.mw
+++ b/Huawei.mw
@@ -12,3 +12,6 @@ Asekkil '''華''' deg tcinwat lmeɛna-s "[[Ccinwa]]", am akken daɣen i yesɛa a
 ==Ismartfunen==
 
 ==Iɣbula==
+
+[[Taggayt:Huawei]]
+[[Taggayt:Titiknulujiyin n yisallen d teywalt|Huawei]]
