--- a/Gabriele_D'Annunzio.mw
+++ b/Gabriele_D'Annunzio.mw
@@ -3,7 +3,8 @@
 
 ==Ayen Yura==
 
-[[File:Trionfo della morte, già a palazzo sclafani, galleria regionale di Palazzo Abbatellis, palermo (1446) , affresco staccato.jpg|thumb|upright|''Le Triomphe de la mort'', [[palais Abatellis]], [[Palerme]].]]
+[[File:Trionfo della morte, già a palazzo sclafani, galleria regionale di Palazzo Abbatellis, palermo (1446) , affresco staccato.jpg|thumb|upright|''Le Triomphe de la mort'', [[palais Abatellis]], [[Palerme]]]]
+[[File:Gabriele d&#039;Annunzio-Primo vere-Carabba-1913.png|thumb|upright|Gabriele d'Annunzio, ''Primo vere'', Carabba, 1913]]
 
 ;Timaynutin
 * ''Terra Vergine'', ([[1882]])
