*Empty MediaWiki Message*

--- a/Iɣil_aberkan.mw
+++ b/Iɣil_aberkan.mw
@@ -1,5 +1,5 @@
 {{Infobox city}}
-'''Buḥemza''' d yiwet taɣiwant n twilayt n [[Bgayet]], zedɣen-tt 10.846 n yimezdaɣen.
+'''Iɣil aberkan''' neɣ '''Buḥemza''' d yiwet taɣiwant n twilayt n [[Bgayet]], zedɣen-tt 10.846 n yimezdaɣen.
  
 ==Asideg (timella)==
 
