*Empty MediaWiki Message*

--- a/Tisekliwin.mw
+++ b/Tisekliwin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tiselkiwin''' ([[Assaɣ usnan]]: ''Accipitriformes'') d [[tafesna]] n [[aylal|iylalen]] dgi yella wazal ameqran n iylalen [[tagemra|inegmaren]] iy tetten tigmrawin yal ass am [[Aberni|uberni]] d [[ijider]] d [[aẓiẓ|uẓiẓ]], ttgin-t-d Azal n 225 n [[talmest|telmas]], Akken id yella deg tazwara usismel n [[aseflay|iseflayen]] deg tfesna ayyi maca sin akin tettwikkes tuɣal ar [[tafesna|tfesna]] n [[tiseflay]] (falconiformes) 
+'''Tiselkiwin''' ([[Assaɣ usnan]]: '''Accipitriformes''') d [[tafesna (tasnudert)|tafesna]] n [[aylal|iylalen]] anda yella wazal ameqran n iylalen [[tagemra|inegmaren]] iy tetten tigmrawin yal ass am [[Aberni|uberni]] d [[ijider]] d [[aẓiẓ|uẓiẓ]], ttgin-t-d Azal n 225 n [[talmest|telmas]], Akken id yella deg tazwara usismel n [[aseflay|iseflayen]] deg tfesna ayyi maca sin akin tettwikkes tuɣal ar [[tafesna|tfesna]] n [[tiseflay]] (falconiformes)
 
 == [[Tasartut n tesnudert|Asismel]] ==
 [[Tawacult (tasnudert)|tiwaculin]] yeṭṭafaren tafesna ayyi:
