*Empty MediaWiki Message*

--- a/Vk.mw
+++ b/Vk.mw
@@ -1,4 +1,28 @@
-[[Tugna:Vk-mobile.svg|thumb]]
+{{Infobox 
+|abovestyle = background-color: transparent;
+| above = Vk
+| data1 =[[Image:VK.com-logo.svg|250px]]
+| label2 = Tansa url
+| data2 = [https://vk.com/vk.com]
+| label3 = Anaw
+| data3 = [[Azeṭṭa n tmetti]]
+| label4 = Tutlayt
+| data4 = 96 tutlayin
+| label5 = Tiggezt
+| data5 = tlaq
+| label6 = Asutel
+| data6 = [[Saint-Pétersbourg]], [[Rrus]]
+| label7 = Anemhal
+| data7 = ([[Président-directeur général|PDG]])<br />[[Boris Dobrodeev]]<ref>http://www.businessweek.com/news/2014-09-18/mail-dot-ru-names-vkontakte-managers-after-1-dot-47-billion-acquisition</ref>
+| label8 = Amli
+| data8 =
+| label9 = Azmez n awel	
+| data9 = 2006
+| label10 = Agazam n urmud
+| data10 = [[Internet]]
+}}
 
 '''VK''' d aẓeṭṭa inmetti (réseau social) [[arusi]] am [[Facebook]], Tuɣdaḍt n VK d asdukkel n yimdanen, imeẓla akked tikebbaniyin ticki snulfuyen-d ifecka fessusen neɣ ilaqen n teywalt. 
 Ammasen i yejdanen n tkebbanit n VK i d-yezkan deg wexxam Zinger, tamdint tamazrayt di [[San Pitersburg]]. Llant daɣen tnariyin deg Musku akk d [[Kyiv]].
+
+==Iɣbula==
