--- a/Vk.mw
+++ b/Vk.mw
@@ -3,26 +3,26 @@
 | above = Vk
 | data1 =[[Image:VK.com-logo.svg|250px]]
 | label2 = Tansa url
-| data2 = [https://vk.com/vk.com]
+| data2 = https://vk.com
 | label3 = Anaw
-| data3 = [[Azeṭṭa n tmetti]]
+| data3 = [[Azeṭṭa anmetti]]
 | label4 = Tutlayt
 | data4 = 96 tutlayin
-| label5 = Tiggezt
-| data5 = tlaq
-| label6 = Asutel
+| label5 =Yella s [[taqbaylit|teqbaylit]]| 
+data5 = Ih
+| label6 = Tadabut
 | data6 = [[Saint-Pétersbourg]], [[Rrus]]
-| label7 = Anemhal
-| data7 = ([[Président-directeur général|PDG]])<br />[[Boris Dobrodeev]]<ref>http://www.businessweek.com/news/2014-09-18/mail-dot-ru-names-vkontakte-managers-after-1-dot-47-billion-acquisition</ref>
-| label8 = Amli
+| label7 = Bab-is
+| data7 = [[Boris Dobrodeev]]<ref>http://www.businessweek.com/news/2014-09-18/mail-dot-ru-names-vkontakte-managers-after-1-dot-47-billion-acquisition</ref>
+| label8 =
 | data8 =
-| label9 = Azmez n awel	
+| label9 = Azemz
 | data9 = 2006
-| label10 = Agazam n urmud
-| data10 = [[Internet]]
+| label10 =
+| data10 =
 }}
 
-'''VK''' d aẓeṭṭa inmetti (réseau social) [[arusi]] am [[Facebook]], Tuɣdaḍt n VK d asdukkel n yimdanen, imeẓla akked tikebbaniyin ticki snulfuyen-d ifecka fessusen neɣ ilaqen n teywalt. 
-Ammasen i yejdanen n tkebbanit n VK i d-yezkan deg wexxam Zinger, tamdint tamazrayt di [[San Pitersburg]]. Llant daɣen tnariyin deg Musku akk d [[Kyiv]].
+'''VK''' d aẓeṭṭa anmetti (réseau social) [[Rrus|arusi]] am [[Facebook]], iswi n VK d asddukel n yimdanen, imeẓla akked tkebbaniyin ticki snulfuyen-d ifecka fessusen neɣ ilaqen n teywalt. 
+Ammasen igejdanen n tkebbanit n VK zgan-d deg uxxam Zinger, tamdint tamazrayt deg [[Saint-Pétersbourg]]. Llant daɣen tnariyin deg [[Musku]] akked [[Kyiv]].
 
 ==Iɣbula==
