*Empty MediaWiki Message*

--- a/Vk.mw
+++ b/Vk.mw
@@ -5,7 +5,7 @@
 | label2 = Tansa url
 | data2 = https://vk.com
 | label3 = Anaw
-| data3 = [[Azeṭṭa anmetti]]
+| data3 = [[Azeṭṭa ametti]]
 | label4 = Tutlayt
 | data4 = 96 tutlayin
 | label5 =Yella s [[taqbaylit|teqbaylit]]| 
@@ -22,7 +22,7 @@ data5 = Ih
 | data10 =
 }}
 
-'''VK''' d aẓeṭṭa anmetti (réseau social) [[Rrus|arusi]] am [[Facebook]], iswi n VK d asddukel n yimdanen, imeẓla akked tkebbaniyin ticki snulfuyen-d ifecka fessusen neɣ ilaqen n teywalt. 
+'''VK''' d aẓeṭṭa ametti (réseau social) [[Rrus|arusi]] am [[Facebook]], iswi n VK d asddukel n yimdanen, imeẓla akked tkebbaniyin ticki snulfuyen-d ifecka fessusen neɣ ilaqen n teywalt. 
 Ammasen igejdanen n tkebbanit n VK zgan-d deg uxxam Zinger, tamdint tamazrayt deg [[Saint-Pétersbourg]]. Llant daɣen tnariyin deg [[Musku]] akked [[Kyiv]].
 
 ==Iɣbula==
