*Empty MediaWiki Message*

--- a/Facebook.mw
+++ b/Facebook.mw
@@ -5,11 +5,11 @@
 | label2 = Tansa url
 | data2 = [https://facebook.com/ facebook.com/]
 | label3 = Anaw
-| data3 = [[Azeṭṭa n tmetti]]
+| data3 = [[Azeṭṭa ametti]]
 | label4 = Tutlayt
 | data4 = 96 tutlayin
-| label5 = Tiggezt
-| data5 = tlaq
+| label5 = Yella s [[taqbaylit|teqbaylit]] 
+| data5 = Ih
 | label6 = Asutel
 | data6 = [[Palo Alto]], [[Kalifurnya]], [[Marikan]]
 | label7 = Anemhal
@@ -17,10 +17,10 @@
 | label8 = Amli
 | data8 = [[Facebook Inc.]]
 | label9 = Azmez n awel	
-| data9 = 4 fuṛaṛ2 004
+| data9 = 4 fuṛaṛ 2004
 | label10 = Agazam n urmud
 | data10 = [[Internet]]
 }}
 
 
-'''Facebook''' d yiwen uzeṭṭa n tmetti deg [[Anternet|anternet]] yettaǧǧan yal amdan yesɛan amiḍan ad yesnulfu amaɣnu n useqdac, deg-s ad iceggeɛ tilɣa izemren ad walin w'i d-is-yehwan, akken yextaṛ. yezmer ad iceggeɛ tilɣa ama d: (tugniwin, iḍrisen, imarrazen, atg.) ad yesnulfu isebtaren, igrawen iwakken ad yeǧǧ wiyaḍ ad issinen tisuddutin, tiṛmisin, d wayen yark fayeg yettnaḍaḥ. Deg isebtaren, d igrawen ayen yark i yebḍa umseqdac ad twalin imseqdacen wiyaḍ maci am ma yili s umaɣnu-yines.
+'''Facebook''' d yiwen uzeṭṭa n tmetti deg [[Anternet|internet]] yettaǧǧan yal amdan yesɛan amiḍan ad yesnulfu amaɣnu n useqdac, deg-s ad iceggeɛ tilɣa izemren ad walin w'i d-is-yehwan, akken yextaṛ. yezmer ad iceggeɛ tilɣa ama d: (tugniwin, iḍrisen, imarrazen, atg.) ad yesnulfu isebtaren, igrawen iwakken ad yeǧǧ wiyaḍ ad issinen tisuddutin, tiṛmisin, d wayen yark fayeg yettnaḍaḥ. Deg isebtaren, d igrawen ayen yark i yebḍa umseqdac ad twalin imseqdacen wiyaḍ maci am ma yili s umaɣnu-yines.
