*Empty MediaWiki Message*

--- a/Vk.mw
+++ b/Vk.mw
@@ -22,7 +22,7 @@ data5 = Ih
 | data10 =
 }}
 
-'''VK''' d aẓeṭṭa ametti (réseau social) [[Rrus|arusi]] am [[Facebook]], iswi n VK d asddukel n yimdanen, imeẓla akked tkebbaniyin ticki snulfuyen-d ifecka fessusen neɣ ilaqen n teywalt. 
+'''VK''' d azeṭṭa ametti (réseau social) [[Rrus|arusi]] am [[Facebook]], iswi n VK d asddukel n yimdanen, imeẓla akked tkebbaniyin ticki snulfuyen-d ifecka fessusen neɣ ilaqen n teywalt. 
 Ammasen igejdanen n tkebbanit n VK zgan-d deg uxxam Zinger, tamdint tamazrayt deg [[Saint-Pétersbourg]]. Llant daɣen tnariyin deg [[Musku]] akked [[Kyiv]].
 
 ==Iɣbula==
