*Empty MediaWiki Message*

--- a/Skype.mw
+++ b/Skype.mw
@@ -32,3 +32,5 @@ Aseɣzan n usiwel deg uzeṭṭa IP
 Skype yettwasebded deg useggas n [[2003]] deg [[isṭunya]] sɣur [[Niklas Zennstrum]] d [[Janus Fris]] <ref>{{lien web|url=http://about.skype.com/|title=Ɣef Skype}} (s tefransist)</ref>, yettwasnefli sɣur [[Ahti Heinla]], [[Priit Kasesalu]] d [[Jaan Tallinn]]<ref>{{lien web|url=http://emagazine.credit-suisse.com/app/article/index.cfm?fuseaction=OpenArticle&aoid=163167&coid=7805&lang=FR |title=Skype, une réussite balte}} (s tefransist).</ref>.
 
 ==Iɣbula==
+
+{{Taggayt:Skype|Skype}}
