*Empty MediaWiki Message*

--- a/Skype.mw
+++ b/Skype.mw
@@ -33,4 +33,4 @@ Skype yettwasebded deg useggas n [[2003]] deg [[isṭunya]] sɣur [[Niklas Zenns
 
 ==Iɣbula==
 
-{{Taggayt:Skype|Skype}}
+[[Taggayt:Skype|Skype]]
