--- a/YouTube.mw
+++ b/YouTube.mw
@@ -11,11 +11,11 @@
 | label5 = 
 | data5 = 
 | label6 = Azemz n tlalit
-| data6 = 14 fuṛaṛ 2005
+| data6 = 14 fuṛaṛ [[2005]]
 | label7 = Imesbeddiyen
-| data7 = Steve Chen, Chad Hurley d Jawed Karim
+| data7 = [[Steve Chen]], [[Chad Hurley]] d [[Jawed Karim]]
 | label8 = Tadabut
-| data8 = 901 Cherry Ave. San Bruno, Californie 94066, iwunak yedduklen n Marikan (USA)
+| data8 = 901 Cherry Ave. San Bruno, [[Kalifurnya]] 94066, [[Iwunak Yeddukklen n Temrikt]] (USA)
 | label9 = 
 | data9 = 
 | label10 = Agazam n urmud
@@ -28,15 +28,16 @@
 | data1 =[[Image: YouTube_Logo_2017.svg|200px]]
 | label2 = Tansa
 | data2 = [https://youtube.com/ YouTube.com]
-| label3 = Tutlayin n usihel
-| data3 = [[JavaScript]], [[C]], [[C++]], [[Python]], [[Java (tutlayt)|Java]], [[Go (tutlayt)|Go]], [[Ruby]]
+| label3 = [[Tutlayt n usihel|Tutlayin n usihel]]
+| data3 = [[JavaScript]], [[C (tameslayt)|C]], [[C++]], [[Python]], [[Java (tutlayt)|Java]], [[Go (tutlayt)|Go]], [[Ruby]]
 | label4 = Anaw
-| data4 = Azeṭṭa ametti <br>
+| data4 = 
+[[Azeṭṭa ametti]]<br>
 Asmel web n umaslan n tvidyutin
 | label5 = Tutlayt 
 | data5 = Agtutlayan
 | label6 = Tanekkra
-| data6 = Mayyu 2005
+| data6 = Mayyu [[2005]]
 | label7 = 
 | data7 = 
 | label8 = 
@@ -47,6 +48,6 @@ Asmel web n umaslan n tvidyutin
 | data10 = 
 }}
 
-'''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d azeṭṭa ametti anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.
+'''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d [[azeṭṭa ametti]] anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.
 
 ==Iɣbula==
