*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -51,3 +51,5 @@ Asmel web n umaslan n tvidyutin
 '''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d [[azeṭṭa ametti]] anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.
 
 ==Iɣbula==
+
+[[Taggayt:YouTube|YouTube]]
