*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -29,7 +29,7 @@
 | label2 = Tansa
 | data2 = [https://youtube.com/ YouTube.com]
 | label3 = [[Tutlayt n usihel|Tutlayin n usihel]]
-| data3 = [[JavaScript]], [[C (tameslayt)|C]], [[C++]], [[Python]], [[Java (tutlayt)|Java]], [[Go (tutlayt)|Go]], [[Ruby]]
+| data3 = [[JavaScript]], [[C (tameslayt)|C]], [[C++]], [[Python]], [[Java (tutlayt)|Java]], [[Go]], [[Ruby]]
 | label4 = Anaw
 | data4 = 
 [[Azeṭṭa ametti]]<br>
@@ -49,6 +49,8 @@ Asmel web n umaslan n tvidyutin
 }}
 
 '''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d [[azeṭṭa ametti]] anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.
+
+==Amezruy==
 
 ==Iɣbula==
 
