*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -3,7 +3,7 @@
 | above = YouTube, LLC
 | data1 =[[Image: YouTube_Logo_2017.svg|200px]]
 | label2 = Asmel web
-| data2 = [https://youtube.com/ YouTube.com]
+| data2 = [https://youtube.com/ Asmel web unsib]
 | label3 = 
 | data3 =
 | label4 = 
@@ -16,10 +16,10 @@
 | data7 = [[Steve Chen]], [[Chad Hurley]] d [[Jawed Karim]]
 | label8 = Tadabut
 | data8 = 901 Cherry Ave. San Bruno, [[Kalifurnya]] 94066, [[Iwunak Yeddukklen n Temrikt]] (USA)
-| label9 = 
-| data9 = 
-| label10 = Agazam n urmud
-| data10 = [[Internet]]
+| label9 = Takebbanit tayemmat
+| data9 = [[Google]]
+| label10 =
+| data10 =
 }}
 
 {{Infobox 
@@ -29,15 +29,15 @@
 | label2 = Tansa
 | data2 = [https://youtube.com/ YouTube.com]
 | label3 = [[Tutlayt n usihel|Tutlayin n usihel]]
-| data3 = [[JavaScript]], [[C (tameslayt)|C]], [[C++]], [[Python]], [[Java (tutlayt)|Java]], [[Go]], [[Ruby]]
+| data3 = [[JavaScript]], [[C (tameslayt)|C]], [[C++]], [[Python]]<ref>{{lien web |title=Google's Grumpy code makes Python Go |url=https://www.theregister.co.uk/2017/01/05/googles_grumpy_makes_python_go/ }} (s tenglizit) </ref>, [[Java (tutlayt)|Java]]<ref>{{lien web |title=Guice Deuce |url=http://googlecode.blogspot.no/2009/05/guice-deuce.html }} (s tenglizit)</ref>, [[Go]], [[Ruby]]
 | label4 = Anaw
 | data4 = 
 [[Azeṭṭa ametti]]<br>
 Asmel web n umaslan n tvidyutin
 | label5 = Tutlayt 
-| data5 = Agtutlayan
+| data5 = Agtutlayan (80 n tutlayin)<ref name="yt stats">https://www.youtube.com/yt/press/statistics.html. </ref>
 | label6 = Tanekkra
-| data6 = Mayyu [[2005]]
+| data6 = Mayyu 2005<ref>{{lien web|url=https://www.youtube.com/yt/about/fr/|title=Ɣef YouTube}} (s tefransist)</ref>(asmel)
 | label7 = 
 | data7 = 
 | label8 = 
