*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -48,7 +48,11 @@ Asmel web n umaslan n tvidyutin
 | data10 = 
 }}
 
-'''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d [[azeṭṭa ametti]] anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.
+'''YouTube''' s [[taqbaylit|teqbaylit]] nezmer ad t-naru '''yutub''', d asmel web n umaslan (hébergemen) n tvidyutin am akken i yella daɣen d [[azeṭṭa ametti]] anda iseqdacen zemren ad aznen neɣ ad ẓren tividyutin, ad eǧǧen iwenniten, ṛṛay-nsen neɣ ad bḍun (ad zuzren) tividyutin.<br/>
+
+YouTube yettwarna-d deg fuṛaṛ 2005 sɣur [[Steve Chen]], [[Chad Hurley]] d [[Jawed Karim]], kraḍ (3) n ixeddem iqdimen n [[PayPal]], tuɣal tewwi-ten [[Google]] ɣur-s deg ṭuber 2006 s 1.6 imelyaren n dulaṛ.<br/>
+
+Deg useggas n [[2009]], ugar n 350 imelyan n yemdanen i irezzun ɣer wesmel-agi yal ayyur. Deg 28 ṭuber [[2010]], meṛṛa imaṭṭafen YouTube wwḍen ɣer umelyar n inezdiyen, am akken daɣen deg useggas n [[2018]], ugar n 1.9 imelyaren n iseqdacen i iteqqnen ɣer YouTube yal ayyur.
 
 ==Amezruy==
 
