--- a/YouTube.mw
+++ b/YouTube.mw
@@ -55,6 +55,20 @@ YouTube yettwarna-d deg fuṛaṛ 2005 sɣur [[Steve Chen]], [[Chad Hurley]] d [
 Deg useggas n [[2009]], ugar n 350 imelyan n yemdanen i irezzun ɣer wesmel-agi yal ayyur. Deg 28 ṭuber [[2010]], meṛṛa imaṭṭafen YouTube wwḍen ɣer umelyar n inezdiyen, am akken daɣen deg useggas n [[2018]], ugar n 1.9 imelyaren n iseqdacen i iteqqnen ɣer YouTube yal ayyur.
 
 ==Amezruy==
+[[file:Youtube founders.jpg|vignette|400px|Imesbedden n YouTube : [[Chad Hurley]], [[Steve Chen]] d [[Jawed Karim]].]]
+Takebbanit tettwarna-d deg fuṛaṛ [[2005]] sɣur [[Chad Hurley]], [[Steve Chen]] d [[Jawed Karim]]<ref> [https://www.usatoday.com/tech/news/techinnovations/2005-11-21-video-websites_x.htm « ''Video websites pop up, invite postings'' »], ''USA Today'' (s tenglizit). </ref>. Deg tazwara llan bɣan-t ad yili d asmel i wemlili n yilmeẓyen s useqdec n tvidyutin, maca imesbedden beddlen ṛṛay-nsen kra n wussan kan segmi bdan. Tavidyut tamezwarut i yettwarnan ɣer youtube d tin n Jawed Karim deg 23 yebrir 2005 ɣef 20:27.<br>
+
+Deg 9 ṭuber 2006, [[Google]] tuɣ YouTube s 1.65 imelyaren n dulaṛ mebla ma yeḍra-d ubeddel deg yisem-is, am akken daɣen i teǧǧa 67 seg yixeddamen-is gar-asen Chad Hurley et Steve Chen.
+
+=== Agrudem n YouTube ===
+<br/>
+<gallery caption="Ibeddilen i d-yeḍran ɣef ulugu n YouTube.">
+File:Logo of YouTube (2005-2011).svg|14 fuṛaṛ 2005 ɣer 11 ṭuber 2011 (dujember 2011 deg usmel).
+File:Logo of YouTube (2011-2013).svg|11 ṭuber 2011 (dujember 2011 deg usmel) ɣer 19 dujember 2013.
+File:Logo of YouTube (2013-2015).svg|19 dujember 2013 ɣer ṭuber 2015.
+File:Logo of YouTube (2015-2017).svg|Ṭuber 2015 alma d 29 ɣuct 2017.
+File:YouTube Logo 2017.svg|Seg 29 ɣuct 2017.
+</gallery>
 
 ==Iɣbula==
 
