*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -70,6 +70,19 @@ File:Logo of YouTube (2015-2017).svg|Ṭuber 2015 alma d 29 ɣuct 2017.
 File:YouTube Logo 2017.svg|Seg 29 ɣuct 2017.
 </gallery>
 
+== Ẓer daɣen ==
+
+=== Imeẓla yeqqnen ===
+
+* [[YouTube Premium]]
+* [[YouTube Music]]
+* [[YouTube Kids]]
+* [[YouTube Gaming]]
+
+=== Iseɣwan ===
+* [https://www.youtube.com/ Asmel unsib]
+* [https://m.youtube.com/ YouTube aziraz]
+
 ==Iɣbula==
 
 [[Taggayt:YouTube|YouTube]]
