--- a/YouTube.mw
+++ b/YouTube.mw
@@ -58,7 +58,7 @@ Deg useggas n [[2009]], ugar n 350 imelyan n yemdanen i irezzun ɣer wesmel-agi 
 [[file:Youtube founders.jpg|vignette|400px|Imesbedden n YouTube : [[Chad Hurley]], [[Steve Chen]] d [[Jawed Karim]].]]
 Takebbanit tettwarna-d deg fuṛaṛ [[2005]] sɣur [[Chad Hurley]], [[Steve Chen]] d [[Jawed Karim]]<ref> [https://www.usatoday.com/tech/news/techinnovations/2005-11-21-video-websites_x.htm « ''Video websites pop up, invite postings'' »], ''USA Today'' (s tenglizit). </ref>. Deg tazwara llan bɣan-t ad yili d asmel i wemlili n yilmeẓyen s useqdec n tvidyutin, maca imesbedden beddlen ṛṛay-nsen kra n wussan kan segmi bdan. Tavidyut tamezwarut i yettwarnan ɣer youtube d tin n Jawed Karim deg 23 yebrir 2005 ɣef 20:27.<br>
 
-Deg 9 ṭuber 2006, [[Google]] tuɣ YouTube s 1.65 imelyaren n dulaṛ mebla ma yeḍra-d ubeddel deg yisem-is, am akken daɣen i teǧǧa 67 seg yixeddamen-is gar-asen Chad Hurley et Steve Chen.
+Deg 9 ṭuber 2006, [[Google]] tuɣ YouTube s 1.65 imelyaren n dulaṛ mebla ma yeḍra-d ubeddel deg yisem-is, am akken daɣen i teǧǧa 67 seg yixeddamen-is gar-asen Chad Hurley d Steve Chen.
 
 === Agrudem n YouTube ===
 <br/>
