*Empty MediaWiki Message*

--- a/Tutlayt_n_usihel.mw
+++ b/Tutlayt_n_usihel.mw
@@ -1,4 +1,4 @@
-'''Tutlayin n usihel''' (S [[Taglizit|Tegnizt]]: ''Programming languag'') d tagrawt n imenziden uettwarun s daw n ticki n ilugan n tutlayt n usihel, sakin imenziden-a ttekken-d s kra n tukkiyin alamma tettuselkem deg [[Aselkim|uselkim]]
+'''Tutlayin n usihel''' (S [[Taglizit|teglizit]]: ''Programming language'') d tagrawt n imenziden uettwarun s daw n ticki n ilugan n tutlayt n usihel, sakin imenziden-a ttekken-d s kra n tukkiyin alamma tettuselkem deg [[Aselkim|uselkim]]
 
 ma yili wugur gar n ifassen-nneɣ, tewwi-yas-d [[awarzem]] i tifrat-is. Awarzem d awalen (n tefransist, tegnizit ..) i yesseqdac wussnan i tifrat n wugur, maca [[aselkim]] ɣur-s awalen-is imaẓlayen, agraw-nsen d tutlayt n usihel (imeslayen iy gezzu uselkim), wid ara d-isnedhen aselkim (d azrar n wanaden) i tifrat. Gar tutlayin-a:
 
