--- a/Tutlayt_n_usihel.mw
+++ b/Tutlayt_n_usihel.mw
@@ -63,4 +63,4 @@ DBASE
 
 * [http://www.imyura.net/Timenza/tabid/57/articleType/ArticleView/articleId/142/Awal-ef-uselkim-su-Y-At-Yiil.aspx www.imyura.net]
 
-[[Taggayt:Timeslayin n usihel|!]]
+[[Taggayt:Tutlayt n usihel|!]]
