--- a/Pascal.mw
+++ b/Pascal.mw
@@ -47,5 +47,5 @@ end.
 * [http://www.imyura.net/Timenza/tabid/57/articleType/ArticleView/articleId/142/Awal-ef-uselkim-su-Y-At-Yiil.aspx www.imyura.net]
 
 
-[[Taggayt:Timeslayin n usihel]]
+[[Taggayt:Tutlayt n usihel]]
 [[Taggayt:Alugen ISO]]
