*Empty MediaWiki Message*

--- a/PHP.mw
+++ b/PHP.mw
@@ -47,4 +47,4 @@ Tura, amur ameqqran n yismal tteddun s PHP (akk d Apache d MySQL), am usmel-a ak
 
 Ugar isalen deg usmel http://www.php.net
 
-[[Taggayt:Timeslayin n usihel]]
+[[Taggayt:Tutlayt n usihel]]
