*Empty MediaWiki Message*

--- a/C_Sharp.mw
+++ b/C_Sharp.mw
@@ -85,4 +85,4 @@ class Program
 <ref name="influenced">{{cite web |url = http://www.barrycornelius.com/papers/java5/onefile/ |title = Java 5 catches up with C# |date = December 1, 2005 |publisher  = [[University of Oxford]] Computing Services |first = Barry |last = Cornelius |accessdate = June 18, 2014 |quote = In my opinion, it is C# that has caused these radical changes to the Java language. ([[Barry Cornelius]]) }}</ref>
 }}
 
-[[Taggayt:Timeslayin n usihel]]
+[[Taggayt:Tutlayt n usihel]]
