*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -29,7 +29,7 @@
 | label2 = Tansa
 | data2 = [https://youtube.com/ YouTube.com]
 | label3 = [[Tutlayt n usihel|Tutlayin n usihel]]
-| data3 = [[JavaScript]], [[C (tameslayt)|C]], [[C++]], [[Python]]<ref>{{lien web |title=Google's Grumpy code makes Python Go |url=https://www.theregister.co.uk/2017/01/05/googles_grumpy_makes_python_go/ }} (s tenglizit) </ref>, [[Java (tutlayt)|Java]]<ref>{{lien web |title=Guice Deuce |url=http://googlecode.blogspot.no/2009/05/guice-deuce.html }} (s tenglizit)</ref>, [[Go]], [[Ruby]]
+| data3 = [[JavaScript]], [[C (tutlayt)|C]], [[C++]], [[Python]]<ref>{{lien web |title=Google's Grumpy code makes Python Go |url=https://www.theregister.co.uk/2017/01/05/googles_grumpy_makes_python_go/ }} (s tenglizit) </ref>, [[Java (tutlayt)|Java]]<ref>{{lien web |title=Guice Deuce |url=http://googlecode.blogspot.no/2009/05/guice-deuce.html }} (s tenglizit)</ref>, [[Go]], [[Ruby]]
 | label4 = Anaw
 | data4 = 
 [[Azeṭṭa ametti]]<br>
