*Empty MediaWiki Message*

--- a/JavaScript.mw
+++ b/JavaScript.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''JavaScript''' d [[tameslayt n usihel]] mebla compilation i tt-yesnulfan [[Brendan Eich]] ([[Netscape]]). JavaScript yeddu ala g lBrowser maca tura nezmer ad t-nesseqdac deg Backend s [[Node.js]].
+'''JavaScript''' d [[tutlayt n usihel]] mebla compilation i d-yesnulfa [[Brendan Eich]] ([[Netscape]]). JavaScript itddu kan deg yiminig web maca tura nezmer ad t-nesseqdec deg Backend s [[Node.js]].
 
 == Hello world == 
 
