*Empty MediaWiki Message*

--- a/TypeScript.mw
+++ b/TypeScript.mw
@@ -23,4 +23,4 @@ S TypeScrit, nezmer ad nerna les Types akken ur nezmir ad nɛeddi ala ''number''
 
 Win yesseqdacen addition s Typscript ur yezmir ara ad yessawel addition(3, 'toto').
 
-[[Taggayt:Timeslayin n usihel]]
+[[Taggayt:Tutlayt n usihel]]
