--- a/DBase.mw
+++ b/DBase.mw
@@ -5,4 +5,4 @@ Syin akkin, George Tate d Hal Lashlee, gren-d afus, rnan sqewmen-t, armi d usegg
 == Tamselyut ==
 * [http://www.imyura.net/Timenza/tabid/57/articleType/ArticleView/articleId/142/Awal-ef-uselkim-su-Y-At-Yiil.aspx www.imyura.net]
 
-[[Taggayt:Timeslayin n usihel]]
+[[Taggayt:Tutlayt n usihel]]
