*Empty MediaWiki Message*

--- a/BASIC.mw
+++ b/BASIC.mw
@@ -4,4 +4,4 @@
 == Tamselyut ==
 * [http://www.imyura.net/Timenza/tabid/57/articleType/ArticleView/articleId/142/Awal-ef-uselkim-su-Y-At-Yiil.aspx www.imyura.net]
 
-[[Taggayt:Timeslayin n usihel]]
+[[Taggayt:Tutlayt n usihel]]
