/* Awalen n tmeslayin n usel kim */

--- a/Tutlayt_n_usihel.mw
+++ b/Tutlayt_n_usihel.mw
@@ -24,7 +24,7 @@ D tameslayt i d-ilulen deg useggas 1972, sɣur umussnaw DENNIS RITCHIE. Deg tazw
 _ er taggara n yiseggasen 70, amussnaw WAYNE RATLIFF ( iqeddec di NASA), isnulfa-d timeslayen i useqdec n taffa n isefka (base de données), i wumi isemma VULCAN.
 Syin akkin, GEORGE TATE d HAL LASHLEE, gren-d afus, rnan sqewmen-t, armi d useggas 1981, yuɣal isem-is dbase (data base).
 
-== Awalen n tmeslayin n usel kim ==
+== Awalen n tutlayin n uselkim ==
 
 Awalen-a zemren ad ilin, d wid n tegnizit mmden, neɣ d asewzel n wawalen n tegnizit.
 
