*Empty MediaWiki Message*

--- a/Letnayen.mw
+++ b/Letnayen.mw
@@ -1,5 +1,4 @@
-'''Arim''' (letnayen), s [[tafrensist|tefransist]] '''lundi''', d [[ass]] wissin deg [[imalas|yimalas]] (semmana), s deffir-is yettas-d [[Acer]] (lḥed), zdat-is yettili [[Aram|waram]] (ttlata).
-
+'''Arim''' (letnayen), s [[tafrensist|tefransist]] (lundi), d [[ass]] wissin deg [[imalas|yimalas]] (semana), s deffir-is yettas-d [[Acer]] (lḥed), zdat-is yettili [[Aram|waram]] (ttlata).
 
 == Deg wesɣan ==
 * Deg [[tudayt]]: Arim ɣer [[udayen|wudayen]] d ass i yifen ussan i tuẓumt.
