*Empty MediaWiki Message*

--- a/Ass.mw
+++ b/Ass.mw
@@ -1,4 +1,4 @@
-'''Ass''' d tallit n [[akud|wakud]] tasektayt yettaṭṭafen 24 n [[tasragt|tesragin]], dges [[iṭ]] d [[Azal (akud)|wazal]] yettemṭafaren s tuzzya n [[tagnit|tegnit]] ɣef ugellus-is (axis)
+'''Ass''' d tallit n [[akud|wakud]] tasektayt yettaṭṭafen 24 n [[tasragt|tesragin]], deg-s [[iḍ]] d [[Azal (akud)|wazal]] yettemṭafaṛen s tuzzya n [[tagnit|tegnit]] ɣef ugellus-is (axis)
 
 == Ussan n imalas ==
 
