*Empty MediaWiki Message*

--- a/Tagnit_(Amtiweg).mw
+++ b/Tagnit_(Amtiweg).mw
@@ -1,6 +1,6 @@
 [[Tugna:Stagnogley.JPG|thumb|300px|Tissi n wakal]]
 
-'''Akal''' d [[tissi]] tajumma y ifetteten isdurayen iggi n [[tagnit|tegnit]], Yelfa (yeḍra) dges ubeddel seg zik af kra n [[tamentilt|tmentilin]] n [[anezwu]]
+'''Akal''' d [[tissi]] tajumma y ifetteten isdurayen iggi n [[Akal|wakal]], yelfa (yeḍra) deg-s ubeddel seg zik ɣef kra n [[tamentilt|tmentilin]] n [[anezwu]]
 
 == Tissiwin n wakal ==
 
