--- a/Microsoft_Windows.mw
+++ b/Microsoft_Windows.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-Windows (s tseklant "isfuyla" s tutlayt taglizit) d yiwet n tseddaṛt n [[Anagraw n wammud|inagramen n wammud]] i d-tefres [[Microsoft]] iy selkimen imṣudan PC. D win id yarnan deffir [[MS DOS]].
+Windows (s tseklant "isfuyla" s tutlayt taglizit) d yiwet n tseddaṛt n [[Anagraw n wammud|inagrawen n wammud]] i d-tefres [[Microsoft]] iy selkimen imṣudan PC. D win id yarnan deffir [[MS DOS]].
 
 Seg iseggasen 1990 ''(agim, tza twines d tzat)'', d ttwafɣa n Windows 95, i  d-yemmugren arbaḥ ameqqṛan, dɣa imi amaẓrag-ines yestenya amtawa d waṭas imasraken n iselkimen iwakken ad sbeddayen deg furas-nsen ala Windows 95 neɣ muyaf-asen gen tafagwit n tedrimt, ayagi yeǧǧat ad yawi amḍiq ameqṛan deg ugduz.
 
