*Empty MediaWiki Message*

--- a/Microsoft_Windows.mw
+++ b/Microsoft_Windows.mw
@@ -1,7 +1,7 @@
 {{Databox}}
-Windows (s tseklant "isfuyla" s tutlayt taglizit) d yiwet n tseddaṛt n [[Anagraw n wammud|inagrawen n wammud]] i d-tefres [[Microsoft]] iy selkimen imṣudan PC. D win id yarnan deffir [[MS DOS]].
+Windows (s tseklant "isfuyla" s [[taglizit|tutlayt taglizit]]) d yiwen n unagraw seg [[Anagraw n wammud|yinagrawen n wammud]] i d-tesuffeɣ [[Microsoft]] i yiselkimen imṣudan (PC). Yerna-d deffir [[MS DOS]].
 
-Seg iseggasen 1990 ''(agim, tza twines d tzat)'', d ttwafɣa n Windows 95, i  d-yemmugren arbaḥ ameqqṛan, dɣa imi amaẓrag-ines yestenya amtawa d waṭas imasraken n iselkimen iwakken ad sbeddayen deg furas-nsen ala Windows 95 neɣ muyaf-asen gen tafagwit n tedrimt, ayagi yeǧǧat ad yawi amḍiq ameqṛan deg ugduz.
+Seg yiseggasen n 1990 ''(agim tẓa twines d tzat)'', d ttwafɣa n Windows 95, i  d-yemmugren rbaḥ ameqqṛan, dɣa imi amaẓrag-ines yestenya amtawa d waṭas n yimesraken n yiselkimen iwakken ad sbeddayen deg yifuras-nsen ala Windows 95 neɣ muyaf-asen gen tafagwit n tedrimt, ayagi yeǧǧat ad yawi amḍiq ameqṛan deg ugduz.
 
 taseddaṛt n Windows deg-s aṭas ifurkawen:
 * Afurk amenzu, d win umi neqqar afurk 16 ''(mraw sed)'' ibitten, iɣum Windows si lqem 1 ar 3.11 (3.2 s [[Tacinwatt|tcinwatt]]), Yeffeɣ-d aseggas n 1985 ''(mraw tza twines d tamet sem)'', ileḥḥu (itedddu) kan deg selkimen imṣudan PC, uqqin 16 ibitten.
